--- a/pug/components/template.pug
+++ b/pug/components/template.pug
@@ -5,6 +5,7 @@ html
 		meta(charset="UTF-8")
 		link(rel="stylesheet", href="css/style.css")
 		link(rel="stylesheet", href="css/animations.css")
+		link(rel="stylesheet", href="icons/arrows.css")
 	body
 		include header.pug
 		block content
