--- a/pug/index.pug
+++ b/pug/index.pug
@@ -3,8 +3,8 @@ block content
 	main
 		section.intro
 			.intro_content
-				p.title.fadeInDown Mat maths
-				p.subtitle.fadeInUp Aventures a Izeland
+				p.intro_title.fadeInDown Mat maths
+				p.intro_subtitle.fadeInUp Aventures a Izeland
 				p
 					| Acompanya a en Mat en les seves peripècies per Izeland i desvelarás els misteris 
 					| que amaga aquesta illa foradada.
@@ -17,4 +17,3 @@ block content
 			+box("img/box_learn.png", "Complementa", "Aplica els teus coneixements matemàtics.")
 			+box("img/box_review.png", "Reforça", "Deixa't acompanyar per Mat i feforça els teus coneixementts matemàtics")
 			+box("img/box_research.png", "Investiga", "Investiga amb en Mat per superar cada repte.")
-
