--- a/pug/components/template.pug
+++ b/pug/components/template.pug
@@ -3,14 +3,14 @@ doctype html
 html
 	head
 		meta(charset="UTF-8")
+		meta(name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0")
 		link(rel="stylesheet", href="css/style.css")
 		link(rel="stylesheet", href="css/animations.css")
 		link(rel="stylesheet", href="icons/arrows.css")
+		script(src="https://code.jquery.com/jquery-3.4.1.js")
+		script(src="js/hamburger.js")
+		script(src="js/header.js")
 	body
 		include header.pug
 		block content
 		include footer.pug
-    
-  
-  
-    
