--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,6 +3,7 @@
 
 @import "components/mediaqueries";
 @import "components/globals";
+@import "components/animations";
 
 @import "layouts/header";
 @import "layouts/footer";
