--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,6 @@
 /* Media Queries Mixin
 **********************/
 body {
-  /*height: 100%;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;*/
   margin: 0;
   padding: 0;
   font-family: "Montserrat", sans-serif;
@@ -27,6 +22,11 @@ li {
   font-weight: 700;
   color: #02578c;
 }
+@media only screen and (max-width: 375px) {
+  .title {
+    font-size: 30px;
+  }
+}
 
 .subtitle {
   margin: 0;
@@ -36,6 +36,53 @@ li {
   color: #02578c;
 }
 
+.fadeIn {
+  animation-duration: 4s;
+  animation-fill-mode: both;
+  -webkit-animation-fill-mode: both;
+  animation-name: fadeIn;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.fadeInDown {
+  animation-duration: 1s;
+  animation-fill-mode: both;
+  animation-name: fadeInDown;
+}
+
+@keyframes fadeInDown {
+  from {
+    opacity: 0;
+    transform: translate3d(0, -100%, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+.fadeInUp {
+  animation-duration: 1s;
+  animation-fill-mode: both;
+  animation-name: fadeInUp;
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translate3d(0, 100%, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
 #menu_on {
   display: none;
 }
@@ -94,7 +141,7 @@ li {
     background: #a51a75;
   }
   .visible_menu .nav__options {
-    left: 0;
+    top: 80px;
   }
 }
 
@@ -148,14 +195,14 @@ header {
 }
 @media only screen and (max-width: 768px) {
   .nav__options {
-    width: 50%;
+    width: 100%;
     height: 100vh;
     position: fixed;
-    left: -1000px;
+    left: 0;
     right: 0;
-    top: 70px;
+    top: -1000px;
     z-index: 1;
-    background: #02578c;
+    background: rgba(2, 87, 140, 0.9);
     transition: all 0.75s ease;
     overflow-y: auto;
     text-align: left;
@@ -193,19 +240,16 @@ header {
   color: #080404;
   font-size: 16px;
   font-weight: 700;
-  transition-property: border-bottom, color;
+  transition-property: all;
   transition-duration: 0.3s;
   transition-timing-function: linear;
   transition-delay: 0s;
 }
 .nav__options_list a:hover {
   border-bottom-style: dotted;
-  border-bottom-width: 5px;
+  border-bottom-width: 4px;
   border-bottom-color: #a51a75;
   color: #a51a75;
-}
-.nav__options_list li:last-child a:hover {
-  border: none;
 }
 .nav__options_list .active {
   color: #a51a75;
@@ -231,7 +275,7 @@ footer .contact a {
   color: #080404;
   font-size: 20px;
   font-weight: 700;
-  transition-property: border-bottom, color;
+  transition-property: color;
   transition-duration: 0.3s;
   transition-timing-function: linear;
   transition-delay: 0s;
@@ -422,9 +466,8 @@ footer .contact a {
     margin: 0 10px;
   }
 }
-
 .chapters .title {
-  margin: 40px 0 0 0;
+  margin: 0;
   padding-bottom: 0px;
   font-size: 40px;
   font-weight: 700;
@@ -436,7 +479,6 @@ footer .contact a {
     font-size: 35px;
   }
 }
-
 .chapters .subtitle {
   margin: 0 0 40px 0;
   padding: 0;
@@ -449,6 +491,14 @@ footer .contact a {
   .chapters .subtitle {
     font-size: 20px;
   }
+}
+.chapters .title_grade {
+  margin: 40px 0 0 0;
+  padding: 0;
+  font-size: 25px;
+  font-weight: 700;
+  color: rgba(2, 87, 140, 0.8);
+  text-align: center;
 }
 
 .chapter {
@@ -500,13 +550,21 @@ footer .contact a {
   padding: 0;
   font-size: 25px;
   font-weight: 700;
-  color: #080404;
+  /*color: $color-6;*/
   text-align: center;
 }
 @media only screen and (max-width: 320px) {
   .chapter_box .title_chapter {
     font-size: 20px;
   }
+}
+
+.chapter_box .title_content {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 600;
 }
 
 .chapterline {
@@ -562,18 +620,13 @@ footer .contact a {
 
 .chapterline_box:before {
   content: "";
-  width: 100%;
+  width: 50%;
   height: 2px;
   background-color: #02578c;
   position: absolute;
   left: 0;
   top: 35px;
   z-index: -1;
-}
-@media only screen and (max-width: 768px) {
-  .chapterline_box:before {
-    width: 50%;
-  }
 }
 
 .chapterline_content {
@@ -635,7 +688,10 @@ footer .contact a {
   font-weight: 500;
   text-decoration: none;
   color: black;
-  transition: font-weight 0.3s linear 0s;
+  transition-property: font-weight;
+  transition-duration: 0.3s;
+  transition-timing-function: linear;
+  transition-delay: 0s;
 }
 @media only screen and (max-width: 320px) {
   .chapterline_title a {
@@ -647,7 +703,6 @@ footer .contact a {
   .chapterline_link {
     width: 100%;
     padding: 0;
-    background-color: grey;
   }
 }
 @media only screen and (max-width: 375px) {
@@ -702,10 +757,24 @@ footer .contact a {
 
 .about_image img {
   width: 400px;
+  height: auto;
 }
 @media only screen and (max-width: 768px) {
   .about_image img {
     width: 380px;
+    height: 380px;
+  }
+}
+@media only screen and (max-width: 375px) {
+  .about_image img {
+    width: 320px;
+    height: 320px;
+  }
+}
+@media only screen and (max-width: 320px) {
+  .about_image img {
+    width: 300px;
+    height: 300px;
   }
 }
 
