--- a/sass/components/_globals.scss
+++ b/sass/components/_globals.scss
@@ -1,34 +1,33 @@
 body{
-    /*height: 100%;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;*/
     margin: 0;
     padding: 0;
     font-family: $Font1;
-  }
+}
   
-  a {
-    text-decoration: none;
-  }
+a {
+  text-decoration: none;
+}
 
-  li {
-      list-style: none;
-  }
+li {
+    list-style: none;
+}
   
-  .title{
-    margin: 0;
-    padding: 0;
-    font-size: 40px;
-    font-weight: $bold;
-    color: $color-3;
+.title{
+  margin: 0;
+  padding: 0;
+  font-size: 40px;
+  font-weight: $bold;
+  color: $color-3;
+
+  @include media (mobile-m){
+    font-size: 30px;
   }
+}
   
-  .subtitle {
-    margin: 0;
-    padding: 0;
-    font-size: 25px;
-    font-weight: $bold;
-    color: $color-3;
-  }
+.subtitle {
+  margin: 0;
+  padding: 0;
+  font-size: 25px;
+  font-weight: $bold;
+  color: $color-3;
+}
