--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,5 +1,6 @@
 #menu_on {
     display: none;
+
     @include media(mobile-only){
         display: inline-block;
         width: 25px;
@@ -31,7 +32,6 @@
 }
 
 #menu_on:hover {
-    
     @include media(mobile-only){
         span{
             width: 80%;
@@ -66,7 +66,7 @@
         }
 
         .nav__options{
-            left: 0;
+            top: 80px;
         } 
     }
 }
@@ -111,6 +111,7 @@ header {
     font-size: 25px;
     font-weight: 700;
     color: $color-2;
+
     @include media(mobile-only) {
         margin-left: 25px;
         z-index: 2;
@@ -123,14 +124,14 @@ header {
     box-sizing: border-box;
 
     @include media(mobile-only) {
-        width: 50%;
+        width: 100%;
         height: 100vh;
         position: fixed;
-        left: -1000px;
+        left: 0;
         right: 0;
-        top: 70px;
+        top: -1000px;
         z-index: 1;
-        background: $color-3;
+        background: rgba(2, 87, 140, .9);
         transition: all 0.75s ease;
         overflow-y: auto;
         text-align: left;
@@ -168,27 +169,21 @@ header {
         color: $color-6;
         font-size: 16px;
         font-weight: $bold;
-        transition-property: border-bottom, color;
-        transition-duration: 0.3s;
-        transition-timing-function: linear;
-        transition-delay: 0s;
+        @include linkHover(all);
     }
 
     
     a:hover {
         border-bottom-style: dotted;
-        border-bottom-width: 5px;
+        border-bottom-width: 4px;
         border-bottom-color: $color-2;
         color: $color-2;
-    }
-
-    li:last-child a:hover{
-        border: none;
     }
 
     .active {
         color: $color-2;
     }
+    
     .active:hover {
         border: none;
     }
