--- a/sass/lib/_variables.scss
+++ b/sass/lib/_variables.scss
@@ -6,6 +6,7 @@ $color-3: rgba(2, 87, 140, 1);
 $color-4: rgba(41, 165, 165, 0.8);
 $color-5: rgba(255, 255, 255, 1);
 $color-6: rgba(8, 4, 4, 1);
+$color-7: rgba(38, 38, 38, 1);
 
 $Font1: 'Montserrat', sans-serif;
 $Font2: 'Didact Gothic', sans-serif;
@@ -15,5 +16,3 @@ $regular: 400;
 $medium: 500;
 $semi-bold: 600;
 $bold: 700;
-$extra-bold: 800;
-$black: 900;
